--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"@sveltejs/adapter-auto": "^1.0.0-next.65",
 		"@sveltejs/adapter-static": "^1.0.0-next.24",
 		"@sveltejs/kit": "^1.0.0-next.428",
+		"node-sass": "^7.0.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"sass": "^1.54.5",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
