--- a/package.json
+++ b/package.json
@@ -26,8 +26,5 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.0.4"
 	},
-	"type": "module",
-	"dependencies": {
-		"dom-to-image": "^2.6.0"
-	}
+	"type": "module"
 }
